5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1582_1330.log
== TEST (2019-04-16 17:56:38) 
-- CODE:
valor = int(250/6)
print(round(valor, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:57:02) 
-- CODE:
valor = int(250/6)
print(round(valor, 2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:57:06) 
-- CODE:
valor = int(250/6)
print(round(valor, 2))
-- EXECUTION TIME:
0.178176
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:57:44) 
-- CODE:
valor = int(250/6)
print(round(valor,2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:57:45) 
-- CODE:
valor = int(250/6)
print(round(valor,2))
-- EXECUTION TIME:
0.175333
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:13:58) 
-- CODE:
valor = int(input(250/6))
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:14:00) 
-- CODE:
valor = int(input(250/6))
print(round(valor,2))
-- EXECUTION TIME:
0.176812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:14:03) 
-- CODE:
valor = int(input(250/6))
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:14:09) 
-- CODE:
valor = int(input(250/6))
print(round(valor,2))
-- EXECUTION TIME:
0.172991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:15:30) 
-- CODE:
valor = int(input(250/6))
print = round(valor, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:15:31) 
-- CODE:
valor = int(input(250/6))
print = round(valor, 2)
-- EXECUTION TIME:
0.218216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:15:32) 
-- CODE:
valor = int(input(250/6))
print = round(valor, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:15:33) 
-- CODE:
valor = int(input(250/6))
print = round(valor, 2)
-- EXECUTION TIME:
0.127263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:15:52) 
-- CODE:
valor = int(input(250/6))
print = (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:15:54) 
-- CODE:
valor = int(input(250/6))
print = (valor)
-- EXECUTION TIME:
0.171209
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:17:49) 
-- CODE:
valor = int(input(250//6))
print = (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:17:52) 
-- CODE:
valor = int(input(250//6))
print = (valor)
-- EXECUTION TIME:
0.22441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:17:54) 
-- CODE:
valor = int(input(250//6))
print = (valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:20:41) 
-- CODE:
valor = int(input(250//6))
print = ((round(valor, 2))
-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:20:43) 
-- CODE:
valor = int(input(250//6))
print = ((round(valor, 2))
-- EXECUTION TIME:
0.219634
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:20:44) 
-- CODE:
valor = int(input(250//6))
print = ((round(valor, 2))
-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:21:12) 
-- CODE:
valor = int(input(250//6))
print = (round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:21:14) 
-- CODE:
valor = int(input(250//6))
print = (round(valor, 2))
-- EXECUTION TIME:
0.286441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:21:15) 
-- CODE:
valor = int(input(250//6))
print = (round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:21:17) 
-- CODE:
valor = int(input(250//6))
print = (round(valor, 2))
-- EXECUTION TIME:
0.129905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valor = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:21:48) 
-- CODE:
valorind = int(input(250//6))
print = (round(valorind, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorind = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:21:49) 
-- CODE:
valorind = int(input(250//6))
print = (round(valorind, 2))
-- EXECUTION TIME:
0.195289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    valorind = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:22:14) 
-- CODE:
x = int(input(250//6))
print = (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:22:15) 
-- CODE:
x = int(input(250//6))
print = (round(x, 2))
-- EXECUTION TIME:
0.176838
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:23:50) 
-- CODE:
x = int(250//6)

print = (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:23:51) 
-- CODE:
x = int(250//6)

print = (round(x, 2))
-- EXECUTION TIME:
0.153268
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:24:04) 
-- CODE:
x = int(input(250//6))

print = (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:24:05) 
-- CODE:
x = int(input(250//6))

print = (round(x, 2))
-- EXECUTION TIME:
0.191985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:24:20) 
-- CODE:
x = int(input(250//6))

print = (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:24:22) 
-- CODE:
x = int(input(250//6))

print = (x)
-- EXECUTION TIME:
0.144796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250//6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:24:28) 
-- CODE:
x = int(input(250/6))

print = (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:24:30) 
-- CODE:
x = int(input(250/6))

print = (x)
-- EXECUTION TIME:
0.148538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:24:51) 
-- CODE:
x = int(input(250/6))

print = (round(x, 2)
-- ERROR:
File "XXXX", line 4
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:25:07) 
-- CODE:
x = int(input(250/6))

print = (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:25:08) 
-- CODE:
x = int(input(250/6))

print = (round(x, 2))
-- EXECUTION TIME:
0.141049
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:25:09) 
-- CODE:
x = int(input(250/6))

print = (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:26:08) 
-- CODE:
x = int(input(250/6))

print = (round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:26:09) 
-- CODE:
x = int(input(250/6))

print = (round(x, 4))
-- EXECUTION TIME:
0.212758
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:26:10) 
-- CODE:
x = int(input(250/6))

print = (round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:26:15) 
-- CODE:
x = int(input(250/6))

print = (round(x, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:26:16) 
-- CODE:
x = int(input(250/6))

print = (round(x, 1))
-- EXECUTION TIME:
0.19105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:26:17) 
-- CODE:
x = int(input(250/6))

print = (round(x, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:27:09) 
-- CODE:
x = 5.1729

print = round(x, 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:27:11) 
-- CODE:
x = 5.1729

print = round(x, 1)
-- EXECUTION TIME:
0.202007
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:27:12) 
-- CODE:
x = 5.1729

print = round(x, 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(250/6))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:27:13) 
-- CODE:
x = 5.1729

print = round(x, 1)
-- EXECUTION TIME:
0.17389
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:27:28) 
-- CODE:
x = 5.1729

print (round(x, 1))
-- OUTPUT:
5.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:27:30) 
-- CODE:
x = 5.1729

print (round(x, 1))
-- EXECUTION TIME:
0.124768
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
5.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:27:34) 
-- CODE:
x = 5.1729

print (round(x, 2))
-- OUTPUT:
5.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:27:35) 
-- CODE:
x = 5.1729

print (round(x, 2))
-- EXECUTION TIME:
0.163732
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
5.17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:29:03) 
-- CODE:
total = 250
amigos = 6

x = int(input(total / amigos))

print (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(input(total / amigos))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:29:04) 
-- CODE:
total = 250
amigos = 6

x = int(input(total / amigos))

print (round(x, 2))
-- EXECUTION TIME:
0.132721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 4, in <module>
    x = int(input(total / amigos))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:29:26) 
-- CODE:
total = 250
amigos = 6

x = int(input(total // amigos))

print (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(input(total // amigos))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:29:28) 
-- CODE:
total = 250
amigos = 6

x = int(input(total // amigos))

print (round(x, 2))
-- EXECUTION TIME:
0.117119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 4, in <module>
    x = int(input(total // amigos))
ValueError: invalid literal for int() with base 10: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:29:28) 
-- CODE:
total = 250
amigos = 6

x = int(input(total // amigos))

print (round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(input(total // amigos))
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:31:36) 
-- CODE:
resultado = 41.6666666667

print (round(resultado, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:31:38) 
-- CODE:
resultado = 41.6666666667

print (round(resultado, 2))
-- EXECUTION TIME:
0.142778
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
